# MAALogAnalyzer

./: README.md  package.json  vite.config.ts
.github/: cliff.toml
.github/workflows/: build.yml  deploy-pages.yml
public/: CNAME
src/: App.vue  Index.vue  global.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: NodeCard.vue
src/utils/: logHighlighter.ts  logParser.ts  stringPool.ts
src/views/: DetailView.vue  ProcessView.vue  TextSearchView.vue
