[package]
name = "maa-log-analyzer"
version = "1.2.1"
description = "MAA 日志分析器"
authors = ["Windsland52"]
license = "MIT"
repository = "https://github.com/Windsland52/MAALogAnalyzer"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-read-dir", "dialog-all", "fs-read-file", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]



